...
    <Spinner
        android:id="@+id/viewMapSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnFilter"
        app:layout_constraintTop_toTopOf="@id/btnFilter"
        app:layout_constraintEnd_toStartOf="@+id/btnFilter"
        />

    <ImageButton
        android:id="@+id/btnFilter"
...
            android:text="All Moods"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginEnd="8dp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnFollowingMoods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#9FE2DD"
            android:text="Following Moods"
            android:fontFamily="@font/poppins_regular"
...
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="searchView,btnFilter"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMoodEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutBottomNav"
...
