<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Default Options -->
    <item
        android:id="@+id/filter_three_recent"
        android:title="Show 3 Most Recent" />

    <!-- Time Filters -->
    <item
        android:id="@+id/filter_week"
        android:title="Last 7 Days" />

...
